<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/second_background"
    tools:context=".ui.job.PostJobActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ImageView
            android:id="@+id/previewImageView2"
            android:layout_width="219dp"
            android:layout_height="148dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/previewImageView2">
            <Button
                android:id="@+id/btn_camera2"
                android:layout_width="139dp"
                android:layout_height="45dp"
                android:layout_marginEnd="22dp"
                android:text="@string/camera"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btn_galeri2"
                android:layout_width="139dp"
                android:layout_height="45dp"
                android:layout_marginStart="22dp"
                android:text="@string/galeri"
                android:textAllCaps="false"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_titlejob_post_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:text="@string/title_job"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_button" />
        <EditText
            android:id="@+id/edt_jobtitle_post_job"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:padding="6dp"
            android:background="@drawable/bg_edt"
            android:hint="@string/hint_job"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_titlejob_post_job" />
        <TextView
            android:id="@+id/tv_company_post_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Nama Perusahaan"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_jobtitle_post_job" />
        <EditText
            android:id="@+id/edt_company_post_job"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_edt"
            android:hint="@string/hint_perusahaan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_company_post_job" />
        <TextView
            android:id="@+id/tv_keahlian_post_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Keahlian"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_company_post_job" />
        <EditText
            android:id="@+id/edt_keahlian_post_job"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:lines="4"
            android:padding="6dp"
            android:background="@drawable/bg_edt"
            android:hint="@string/hint_keahlian"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_keahlian_post_job" />
        <TextView
            android:id="@+id/tv_desc_post_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/desc_job"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_keahlian_post_job" />
        <EditText
            android:id="@+id/edt_desc_post_job"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:lines="6"
            android:padding="6dp"
            android:background="@drawable/bg_edt"
            android:hint="@string/hint_deskripsi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_post_job" />
        <TextView
            android:id="@+id/tv_kualifikasi_post_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/kualifikasi"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_desc_post_job" />
        <EditText
            android:id="@+id/edt_kualifikasi_post_job"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="3"
            android:padding="6dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_edt"
            android:hint="@string/hint_kualifikasi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_kualifikasi_post_job" />
        <TextView
            android:id="@+id/tv_cara_melamar_post_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cara_melamar"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_kualifikasi_post_job" />
        <EditText
            android:id="@+id/edt_cara_melamar_post_job"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_edt"
            android:hint="@string/hint_melamar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cara_melamar_post_job" />
        <TextView
            android:id="@+id/tv_kontakhr_post_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/kontak_hr"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_cara_melamar_post_job" />
        <EditText
            android:id="@+id/edt_kontakhr_post_job"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_edt"
            android:hint="@string/hint_kontak_hr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_kontakhr_post_job" />

        <Button
            android:id="@+id/btn_post_job"
            android:layout_width="206dp"
            android:layout_height="46dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/bg_btn_2"
            android:text="@string/post_job"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_kontakhr_post_job"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>